--- a/DesignerRHN/DesignerRHN-war/web/Legislacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Legislacion.xhtml
@@ -165,7 +165,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="font-size: 9; width: 270px; height: inherit; border-radius: 0px; margin-left: -10px; margin-right: -10px;" id="fooTipoCot" action="tiposcotizantes" actionListener="#{controlTipoCotizante.recibirPagina('atrasLegislacion')}" value=" "/> 
+                                        <p:commandButton style="font-size: 9; width: 270px; height: inherit; border-radius: 0px; margin-left: -10px; margin-right: -10px;" id="fooTipoCot" action="tipocotizante" actionListener="#{controlTipoCotizante.recibirPagina('atrasLegislacion')}" value=" "/> 
                                     </f:facet>
                                 </p:column>
 
