--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -24,49 +24,49 @@
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad02.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" action="novedadconcepto" />
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Por Concepto..."/>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Por Concepto..." action="novedadconcepto"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Novedades manuales y semiautomáticas por concepto"/>
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad03.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value=""  action="novedadtercero"/>
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Por Tercero..."/>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Por Tercero..." action="novedadtercero"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Novedades manuales y semiautomáticas por tercero"/>
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad04.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" action="novedadPlano"/>
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Cargue de Novedades"/>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Cargue de Novedades" action="novedadPlano"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Cargue de novedades manuales y semiautomáticas"/>
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad05.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value=""  action="atausentismos" ></p:commandButton>
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Ausentismos..."/>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Ausentismos..." action="atausentismos"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Registro de ausentismo por empleado"/>
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad06.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" actionListener="#{controlNovedadesVacaciones.recibirPag('novedad')}" action="vacaciones" ></p:commandButton>
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Vacaciones"/>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Vacaciones" action="vacaciones"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Novedades manuales y semiautomáticas por empleado"/>
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad07.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" actionListener="#{controlNovedadesDefinitivas.recibirPagina('novedad')}" action="definitivas" ></p:commandButton>
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Liquidacion Definitiva"/>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Liquidacion Definitiva" action="definitivas"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Registro de retiros por empleado"/>
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad08.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" actionListener="#{controlNovedad.recibir('Pago Parcial De Cesantia')}" action="Impresion" ></p:commandButton>
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Pago Parcial de Cesantia"/>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Pago Parcial de Cesantia" action="Impresion"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Registro de cesantías anticipadas por empleado"/>
                                         </div>
@@ -97,7 +97,7 @@
                                     </div>
                                     <div style="height: 50px;">
                                         <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad12.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top; " value="" actionListener="#{controlATExtraRecargo.recibirPagina('novedad')}" action="atextrarecargo"></p:commandButton>
-                                        <h:commandLink style="font-weight: bold; color: #14388B; " value="Configuración Recargos H. E." actionListener="#{controlATExtraRecargo.recibirPagina('novedad')}" action="atextrarecargo"></h:commandLink>
+                                        <h:commandLink style="font-weight: bold; color: #14388B; " value="Configuración Recargos H. E." actionListener="#{controlATExtraRecargo.recibirPagina('novedad')}" action="atextrarecargo" ></h:commandLink>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Configuración general de las cuadrillas"/>
                                         </div>
