--- a/DesignerRHN/DesignerRHN-war/web/tipocotizante.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipocotizante.xhtml
@@ -68,7 +68,7 @@
 
                                 <p:commandButton id="salir" value="" style="background-image: url(Imagenes/Iconos/salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "/> 
                                 <!-- actionListener="#/{controlTiposTrabajadores.salir()}" action="#/{controlTiposTrabajadores.retornarPagina()}" process="@this"  -->
-                                <p:tooltip  for="salir" value="#{msg['salir']}"/>
+                                <p:tooltip  for="salir" value="Salir"/>
                             </p:toolbarGroup>  
                         </p:toolbar>
 
