--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -530,8 +530,8 @@
                                 <p:dialog id="confirmarliquidacion" widgetVar="confirmarliquidacion" header="#{msg['atencion']}" resizable="false" draggable="false" modal="true" height="120" width="420px"  closable="false">  
                                     <h:graphicImage value="Imagenes/Iconos/alerta.png" width="100" height="80" style="position: absolute; left: 10px; top: 10px;"  />
                                     <h:outputText value="#{msg['antesdeliquidar']}" style="position: absolute; left: 120px; top: 10px; width: 280px; font-weight:bold; text-align: center" />
-                                    <h:outputText value="#{msg['confirmarliquidacion']}" style="position: absolute; left: 120px; top: 60px; width: 300px; font-weight:bold" />
-                                    <p:commandButton value="#{msg['si']}" onclick="confirmarliquidacion.hide();" action="liquidacion" style="position: absolute; top: 80px; left: 275px " process="@this" icon="ui-icon-check" />
+                                    <h:outputText value="#{msg['confirmarLiquidacion']}" style="position: absolute; left: 120px; top: 60px; width: 300px; font-weight:bold" />
+                                    <p:commandButton value="#{msg['si']}" onclick="confirmarliquidacion.hide();" action="liquidacion" style="position: absolute; top: 80px; left: 270px " process="@this" icon="ui-icon-check" />
                                     <p:commandButton value="#{msg['no']}" onclick="confirmarliquidacion.hide();" style="position: absolute; top: 80px; left: 330px" process="@this" icon="ui-icon-arrowreturnthick-1-w" />
                                 </p:dialog>
 
