--- a/DesignerRHN/DesignerRHN-war/web/perdireccion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/perdireccion.xhtml
@@ -75,7 +75,7 @@
                             </p:toolbarGroup>  
                         </p:toolbar> 
 
-                        <p:commandButton style=" position: absolute; left: 675px; top: 485px; width: 90px; height: 30px; background-image: url(Imagenes/Iconos/aceptar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ACEPTAR" value="" onclick="confirmarGuardar.show();" update=":form:datosDireccionesPersona" disabled="#{controlPerDirecciones.guardado}" process="@this" />
+                        <p:commandButton style=" position: absolute; left: 675px; top: 485px; width: 90px; height: 30px; background-image: url(Imagenes/Iconos/aceptar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ACEPTAR" value=""  onclick="confirmarGuardar.show();" update=":form:datosDireccionesPersona" disabled="#{controlPerDirecciones.guardado}" process="@this" />
                         <p:commandButton style=" position: absolute; left: 765px; top: 485px; width: 90px; height: 30px; background-image: url(Imagenes/Iconos/cancelar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ATRAS" value="" actionListener="#{controlPerDirecciones.salir()}" action="individual" process="@this" /> 
 
                         <fieldset style="position: absolute; top: 75px; left: 10px; height: 18px; width: 830px; border-radius: 3px; text-align: left; border: solid #C7BFBF 1px">
@@ -520,7 +520,7 @@
                     <p:dialog id="confirmarGuardar" header="#{msg['atencion']}" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="85" width="425" closable="false">  
                         <h:graphicImage value="Imagenes/Iconos/alerta.png" width="75" height="60" style="position: absolute; left: 30px; top: 10px;"  />
                         <h:outputText value="¿Desea guardar los cambios realizados?"  style="position: absolute; left: 120px; top: 20px; width: 250px; font-weight:bold;" />
-                        <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlPerDirecciones.guardarCambiosDireccion()}" action="nomina" style="position: absolute; top: 50px; left: 130px" process="@this" icon="ui-icon-check" />
+                        <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlPerDirecciones.guardarCambiosDireccion()}" action="individual" style="position: absolute; top: 50px; left: 130px" process="@this" icon="ui-icon-check" />
                         <p:commandButton value="No" onclick="confirmarGuardar.hide();" actionListener="#{controlPerDirecciones.cancelarModificacion()}" style="position: absolute; top: 50px; left: 200px" process="@this" icon="ui-icon-close" />
                         <p:commandButton value="Cancelar" onclick="confirmarGuardar.hide();" style="position: absolute; top: 50px; left: 275px" process="@this" icon="ui-icon-arrowreturnthick-1-w" />
                     </p:dialog>
